fix view on some page in compare css feature
(cherry picked from commit 72be52ab357d96c302f8c8ce0351bbd62f2d32c2)