@@ -28,9 +28,9 @@ public class ChallengeController {
     public String defaultPixelPerfect() {
         List<Challenge> challenges = challengeService.getChallengesByType("PIXEL_PERFECT");
         if (!challenges.isEmpty()) {
-            return "redirect:/practice/pixel-perfect/" + challenges.get(0).getChallengeTitle();
+            return "redirect:/practice/pixel-perfect/" + challenges.getFirst().getChallengeTitle();
         }
-        return "redirect:/"; // fallback
+        return "redirect:/";
     }
 
     @GetMapping("/pixel-perfect/{challengeTitle}")
@@ -73,9 +73,9 @@ public class ChallengeController {
     public String defaultCssDebug() {
         List<Challenge> challenges = challengeService.getChallengesByType("CSS_DEBUG");
         if (!challenges.isEmpty()) {
-            return "redirect:/practice/css-debug/" + challenges.get(0).getChallengeTitle();
+            return "redirect:/practice/css-debug/" + challenges.getFirst().getChallengeTitle();
         }
-        return "redirect:/"; // fallback
+        return "redirect:/";
     }
 
     @GetMapping("/css-debug/{challengeTitle}")
